added the ability to add, edit and delete weapons
